functionality mostly complete

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+
+body {background-color: black;}
+
 .odd-row, .even-row {
   border: 2px solid green;
 }
@@ -8,4 +11,60 @@
 
 button[select="true"]{
   background: red;
+}
+
+#insufficient, #exceedsMax {
+  color: red;
+}
+
+[text="green"]{
+  color: green;
+}
+
+[text="red"]{
+  color: red;
+}
+
+[buttontype="line"]{
+  width: 100%;
+}
+
+.placed, .rules{
+  margin: auto;
+  text-align: center; 
+}
+
+.sportbutton{
+  margin: auto;
+  text-align: center; 
+  
+}
+
+.hidden{
+  display: none;
+}
+
+.home-column {
+  float: left;
+  width: 33.33%;
+  /* padding: 5px; */
+}
+.home-column img{
+  height: 1200px;
+  width: 667px;
+}
+.home-row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.home-title {
+  position: absolute; /* Position the background text */
+  bottom:0 ; /* At the bottom. Use top:0 to append it to the top */
+  background: rgb(0, 0, 0); /* Fallback color */
+  background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
+  color: #f1f1f1; /* Grey text */
+  width: 100%; /* Full width */
+  padding: 20px; /* Some padding */
 }
