--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 
-body {background-color: black;}
+
 
 .odd-row, .even-row {
   border: 2px solid green;
@@ -7,6 +7,49 @@ body {background-color: black;}
 
 .col {
   border: 2px solid black;
+  text-align: center;
+  
+}
+
+.header-col{
+  background-color: rgb(122, 179, 125)
+}
+#sport-name {
+  font-size: 28px;
+}
+
+.cashier-image{
+  width:200px;
+  height:200px;
+}
+
+.info-header{
+  border: 1px solid black;
+  background-color:black;
+  color:white;
+}
+.info-account{
+  margin: auto;
+  width: 600px;
+  height: 700px;
+  border: 1px solid black;
+  text-align: center;
+}
+
+.unavailable{
+  margin:auto;
+  text-align:center;
+}
+
+.info{
+  margin: auto;
+  width: 600px;
+  height: 1200px;
+  border: 1px solid black;
+  text-align: center;
+}
+.info ul{
+  list-style-type:none;
 }
 
 button[select="true"]{
@@ -25,6 +68,9 @@ button[select="true"]{
   color: red;
 }
 
+[text="orange"]{
+  color: orange;
+}
 [buttontype="line"]{
   width: 100%;
 }
@@ -50,7 +96,7 @@ button[select="true"]{
   /* padding: 5px; */
 }
 .home-column img{
-  height: 1200px;
+  height: 600px;
   width: 667px;
 }
 .home-row::after {
@@ -61,9 +107,9 @@ button[select="true"]{
 
 .home-title {
   position: absolute; /* Position the background text */
-  bottom:0 ; /* At the bottom. Use top:0 to append it to the top */
-  background: rgb(0, 0, 0); /* Fallback color */
-  background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
+  height:100px ; /* At the bottom. Use top:0 to append it to the top */
+  background: rgba(54, 143, 51, 0.2); /* Fallback color */
+  background: rgba(0, 0, 0, 0.2); /* Black background with 0.5 opacity */
   color: #f1f1f1; /* Grey text */
   width: 100%; /* Full width */
   padding: 20px; /* Some padding */
