added screen for when lines are unavailable

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
 }
 
 .header-col{
-  background-color: rgb(122, 179, 125)
+  background-color: rgb(122, 179, 125,.5)
 }
 #sport-name {
   font-size: 28px;
